Refactor to allow nested conditional statements in all APIs